# braking_system

./: motionHandler.cpp
behavior_planner/: CMakeLists.txt
behavior_planner/config/: params.yaml
behavior_planner/include/behavior_planner/: behaviorPlanner.hpp
behavior_planner/launch/: behaviorPlanner.launch.py  braking_system.launch.py
behavior_planner/src/: behaviorPlanner.cpp
ctrl_long_emergency/: CMakeLists.txt  package.xml
ctrl_long_emergency/config/: params.yaml
ctrl_long_emergency/include/: ctrlLongEmergency.hpp
ctrl_long_emergency/include/ctrl_long_emergency/: ctrlLongEmergency.hpp
ctrl_long_emergency/launch/: ctrlLongEmergency.launch.py
ctrl_long_emergency/src/: ctrlLongEmergency.cpp
doc/: Automated Emergency Brake.pptx
install/: local_setup.sh  setup.sh
install/basic_concepts/lib/basic_concepts/: publisher_demo  subscriber_demo
install/basic_concepts/share/ament_index/resource_index/package_run_dependencies/: basic_concepts
install/basic_concepts/share/ament_index/resource_index/parent_prefix_path/: basic_concepts
install/basic_concepts/share/basic_concepts/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/basic_concepts/share/basic_concepts/cmake/: basic_conceptsConfig-version.cmake  basic_conceptsConfig.cmake
install/basic_concepts/share/basic_concepts/config/: params.yaml
install/basic_concepts/share/basic_concepts/environment/: ament_prefix_path.dsv  path.dsv
install/basic_concepts/share/basic_concepts/launch/: pubsubDemo.launch.py  pubsubMultiDemo.launch.py
install/behavior_planner/lib/behavior_planner/: behavior_planner
install/behavior_planner/share/ament_index/resource_index/package_run_dependencies/: behavior_planner
install/behavior_planner/share/ament_index/resource_index/parent_prefix_path/: behavior_planner
install/behavior_planner/share/behavior_planner/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/behavior_planner/share/behavior_planner/cmake/: behavior_plannerConfig-version.cmake  behavior_plannerConfig.cmake
install/behavior_planner/share/behavior_planner/config/: params.yaml
install/behavior_planner/share/behavior_planner/environment/: ament_prefix_path.dsv  path.dsv
install/behavior_planner/share/behavior_planner/launch/: behaviorPlanner.launch.py
install/ctrl_long_emergency/lib/ctrl_long_emergency/: ctrl_long_emergency
install/ctrl_long_emergency/share/ament_index/resource_index/package_run_dependencies/: ctrl_long_emergency
install/ctrl_long_emergency/share/ament_index/resource_index/parent_prefix_path/: ctrl_long_emergency
install/ctrl_long_emergency/share/ctrl_long_emergency/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ctrl_long_emergency/share/ctrl_long_emergency/cmake/: ctrl_long_emergencyConfig-version.cmake  ctrl_long_emergencyConfig.cmake
install/ctrl_long_emergency/share/ctrl_long_emergency/config/: params.yaml
install/ctrl_long_emergency/share/ctrl_long_emergency/environment/: ament_prefix_path.dsv  path.dsv
install/ctrl_long_emergency/share/ctrl_long_emergency/launch/: ctrlLongEmergency.launch.py
install/plan_long_emergency/lib/plan_long_emergency/: plan_long_emergency
install/plan_long_emergency/share/ament_index/resource_index/package_run_dependencies/: plan_long_emergency
install/plan_long_emergency/share/ament_index/resource_index/parent_prefix_path/: plan_long_emergency
install/plan_long_emergency/share/plan_long_emergency/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/plan_long_emergency/share/plan_long_emergency/cmake/: plan_long_emergencyConfig-version.cmake  plan_long_emergencyConfig.cmake
install/plan_long_emergency/share/plan_long_emergency/config/: config.yaml
install/plan_long_emergency/share/plan_long_emergency/environment/: ament_prefix_path.dsv  path.dsv
install/plan_long_emergency/share/plan_long_emergency/launch/: motion_planning.launch.py
install/velocity_estimator/lib/velocity_estimator/: pose_publisher  velocity_estimator
install/velocity_estimator/share/ament_index/resource_index/package_run_dependencies/: velocity_estimator
install/velocity_estimator/share/ament_index/resource_index/parent_prefix_path/: velocity_estimator
install/velocity_estimator/share/velocity_estimator/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/velocity_estimator/share/velocity_estimator/cmake/: velocity_estimatorConfig-version.cmake  velocity_estimatorConfig.cmake
install/velocity_estimator/share/velocity_estimator/config/: params.yaml
install/velocity_estimator/share/velocity_estimator/environment/: ament_prefix_path.dsv  path.dsv
install/velocity_estimator/share/velocity_estimator/launch/: velocityEstimatorDemo.launch.py
log/: latest_build
plan_long_emergency/: CMakeLists.txt
plan_long_emergency/config/: config.yaml
plan_long_emergency/include/plan_long_emergency/: motionHandler.hpp
plan_long_emergency/launch/: motion_planning.launch.py  planLongEmergency.launch.py
plan_long_emergency/src/: motionHandler.cpp
utils/: CMakeLists.txt  package.xml
utils/include/: trajectoryCalculation.hpp
utils/include/utils/: trajectoryCalculation.hpp
utils/src/: trajectoryCalculation.cpp
utils/test/: test_trajectory.cpp
video/: 2026-03-29 19-28-27.mkv
